--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -15,10 +15,9 @@
 			<version>3.2.5</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.mybatis</groupId>
-			<artifactId>mybatis</artifactId>
-			<version>3.2.8</version>
-		</dependency>
 	</dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.7</java.version>
+	</properties>
 </project>
