--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -2,19 +2,23 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
+  <!-- <parent>
     <groupId>org.mybatis.dao</groupId>
     <artifactId>mybatis-dao</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-  </parent>
+  </parent> -->
   <groupId>org.mybatis.dao</groupId>
   <artifactId>samples</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+
+  
   <name>samples</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.7</java.version>
+	</properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -24,8 +28,20 @@
     </dependency>
   <dependency>
       <groupId>org.mybatis.dao</groupId>
-      <artifactId>mybatis-dao</artifactId>
+      <artifactId>dao</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
-  </dependencies>
+	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+	                <fork>true</fork>
+	            </configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
